--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
+/* App.css */
+
+/* Navbar */
+/* Navbar */
+.navbar {
+  background-color: #61dafb; /* Change the background color to blue */
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Align navbar content in the middle */
+  
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+}
+
+.nav-links {
+  list-style-type: none;
+  display: flex;
+  margin-left: auto;
+}
+
+.nav-links li {
+  margin-right: 15px;
+}
+
+.nav-links li a {
+  color: #fff; /* Change the text color to white */
+  text-decoration: none;
+  position: relative;
+  transition: color 0.3s;
+}
+
+.nav-links li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #fff; /* Change the underline color to white */
+  bottom: -5px;
+  left: 0;
+  transform: scaleX(0);
+  transition: transform 0.3s;
+}
+
+.nav-links li a:hover {
+  color: #fff;
+}
+
+.nav-links li a:hover::before {
+  transform: scaleX(1);
+}
+
+
+/* Header */
+.App-header {
+  margin-top: 30px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Featured Products */
+.featured-products {
+  margin-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.featured-products h2 {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.product-list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.product-card {
+  width: 250px;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.product-card:hover {
+  transform: translateY(-5px);
+}
+
+/* Product Card Styles */
+.product-card h3 {
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+.product-card p {
+  margin-top: 10px;
+  font-size: 1rem;
+}
+.product-card img {
+  width: 100%;
+  max-height: 150px;
+  object-fit: contain;
+}
+
+.product-card button {
+  margin-top: 15px;
+  background-color: #61dafb;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.product-card button:hover {
+  background-color: #45b9d3;
+}
+
+/* Responsive Styling */
+@media screen and (max-width: 768px) {
+  .product-card {
+    width: 100%;
+    max-width: 300px;
   }
 }
